--- a/public/index.html
+++ b/public/index.html
@@ -5,13 +5,12 @@
 	<meta name='viewport' content='width=device-width,initial-scale=1'>
 
 	<title>Hardle</title>
-	<base href="/hardle/" />
 
-	<link rel='icon' type='image/png' href='/favicon.png'>
-	<link rel='stylesheet' href='/global.css'>
-	<link rel='stylesheet' href='/build/bundle.css'>
+	<link rel='icon' type='image/png' href='/hardle/favicon.png'>
+	<link rel='stylesheet' href='/hardle/global.css'>
+	<link rel='stylesheet' href='/hardle/build/bundle.css'>
 
-	<script defer src='/build/bundle.js'></script>
+	<script defer src='/hardle/build/bundle.js'></script>
 </head>
 
 <body>
