--- a/public/index.html
+++ b/public/index.html
@@ -4,13 +4,20 @@
 	<meta charset='utf-8'>
 	<meta name='viewport' content='width=device-width,initial-scale=1'>
 
-	<title>Hardle</title>
+	<title>BOOKLE</title>
 
-	<link rel='icon' type='image/png' href='/hardle/favicon.png'>
-	<link rel='stylesheet' href='/hardle/global.css'>
-	<link rel='stylesheet' href='/hardle/build/bundle.css'>
+	<link rel='icon' type='image/png' href='/favicon.png'>
+	<link rel='stylesheet' href='/global.css'>
+	<link rel='stylesheet' href='/build/bundle.css'>
 
-	<script defer src='/hardle/build/bundle.js'></script>
+	<script defer src='/build/bundle.js'></script>
+
+	<style>
+		body {
+			height: 100%;
+			padding: 0;
+		}
+	</style>
 </head>
 
 <body>
