--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 	<meta charset='utf-8'>
 	<meta name='viewport' content='width=device-width,initial-scale=1'>
 
-	<title>BOOKLE</title>
+	<title>Mille Word</title>
 
 	<link rel='icon' type='image/png' href='favicon.png'>
 	<link rel='stylesheet' href='global.css'>
@@ -20,6 +20,6 @@
 	</style>
 </head>
 
-<body>
+<body style="background-color: var(--global-background);">
 </body>
 </html>
